--- a/others/00-compatibility-chart.html
+++ b/others/00-compatibility-chart.html
@@ -152,6 +152,15 @@
                         <h1 id="compatibility-chart"><a class="header" href="#compatibility-chart">Compatibility Chart</a></h1>
 <p>Hatsu is primarily geared towards the micro-blogging platform in the Fediverse.</p>
 <p>Currently I've created a chart for all the platforms I expect to be compatible with, and hopefully it will be filled in later:</p>
+<h2 id="send"><a class="header" href="#send">Send</a></h2>
+<div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Note">Note</a></th><th><a href="https://www.w3.org/ns/activitystreams#Accept">Accept</a></th></tr></thead><tbody>
+<tr><td>Mastodon</td><td>✅</td><td>✅</td></tr>
+<tr><td>GoToSocial</td><td></td><td></td></tr>
+<tr><td>Misskey</td><td></td><td></td></tr>
+<tr><td>Pleroma</td><td></td><td></td></tr>
+</tbody></table>
+</div>
+<h2 id="receive"><a class="header" href="#receive">Receive</a></h2>
 <div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Follow">Follow</a></th><th></th></tr></thead><tbody>
 <tr><td>Mastodon</td><td>✅</td><td></td></tr>
 <tr><td>GoToSocial</td><td></td><td></td></tr>
